[package]
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
categories = ["no-std"]
description = "Set panicking behavior to reset"
keywords = ["panic-handler", "panic", "reset"]
license = "MIT OR Apache-2.0"
name = "panic-reset"
repository = "https://github.com/korken89/panic-reset"
version = "0.1.0"
readme = "README.md"

[dependencies]
cortex-m = "0.6"
